--- a/Chatper 01-Go 개발환경 설정/김정인.md
+++ b/Chatper 01-Go 개발환경 설정/김정인.md
@@ -67,4 +67,19 @@
 
 ---
 
-- 
+- Go 의 주요 설꼐 목표 중 하나는 코드 작성이 효율적인 언어를 만드는 것
+  - 이는 구문이 단순하고 컴파일러가 빨라야 한다는 것을 의미한다.
+  - 이에 Go 는 표준 포맷을 강제하여 컴파일러를 단순화하고 코드를 자동 생성하는 도구를 제공한다.
+
+
+- Go 는 코드 포맷에 대한 표준 방식을 정의하였으며 표준 포맷으로 코드를 자동으로 맞춰주는 `go fmt` 명령어를 포함한다.
+
+
+- import 문을 정리해주는 `goimports` 라는 향상된 버전의 `go fmt` 가 있다.
+  - `go install golang.org/x/tools/cmd/goimports@latest`
+  - `go imports -l -w .`
+  - `-l` 옵션은 포맷 수정이 필요한 파일들을 콘솔에 출력한다.
+  - `-w` 옵션은 `goimports` 에게 파일을 직접 수정하라고 지시한다.
+
+
+
