[Chapter #01] Golang 의 린팅 그리고 베팅

--- a/Chatper 01-Go 개발환경 설정/김정인.md
+++ b/Chatper 01-Go 개발환경 설정/김정인.md
@@ -81,5 +81,40 @@
   - `-l` 옵션은 포맷 수정이 필요한 파일들을 콘솔에 출력한다.
   - `-w` 옵션은 `goimports` 에게 파일을 직접 수정하라고 지시한다.
 
+  
+
+<br />
+
+## 린팅 그리고 베팅
+
+---
+
+- 모든 go 개발자들은 Effective Go 와 Go 의 위키에 있는 코드 리뷰 규칙페이지를 읽고, 관용적인 Go 코드가 어떻게 보이는지를 이해해야 한다.
+
+
+- 이 스타일을 적용하는 도구로 `golint` 가 있다.
+  - 린터는 코드가 스타일 가이드라인을 잘 지켰는지 확인한다.
+  - 제안하는 변경사항
+    - 알맞은 변수 이름 지정
+    - 오류 메시지 포매팅
+    - 공개 메서드와 타입에 대한 주석 배치
+  
+
+- `golint` 
+  - `go install golang.org/x/lint/golint@latest`
+  - `golint ./...`
+    - 프로젝트 전체를 대상으로 golint 를 진행한다는 의미
+
+
+- `go vet`
+  - `go vet ./...`
+  - 문법적으로는 유효하지만 의도한 대로 수행되지 못하는 실수들
+    - 포매팅 메서드에 잘못된 수의 파라미터를 전달
+    - 절대 사용되지 않는 변수에 값을 할당하는 것
+
+
+- `golangci-lint run`
+  - 위의 두 명령어 `golint` , `go vet` 를 통합해서 실행하는 명령어이다.
+  - 프로젝트의 루트 디렉터리에 `.golangci.yml` 파일을 만들어 활성하고자 하는 린터와 분석할 파일을 설정할 수 있다.
 
 
