[Chapter #01] Makefile 을 통한 go 명령어 자동화 방법

--- a/Chatper 01-Go 개발환경 설정/김정인.md
+++ b/Chatper 01-Go 개발환경 설정/김정인.md
@@ -118,3 +118,40 @@
   - 프로젝트의 루트 디렉터리에 `.golangci.yml` 파일을 만들어 활성하고자 하는 린터와 분석할 파일을 설정할 수 있다.
 
 
+<br />
+
+## Makefile
+
+---
+
+- Makefile : 명령어를 자동화해주는 Tool
+
+
+    .DEFAULT_GOAL := build
+    
+    fmt :
+    go mft ./...
+    .PHONY:fmt
+    
+    lint: fmt
+    golint ./...
+    .PHONY:lint
+    
+    vet: fmt
+    go vet ./...
+    .PHONY:vet
+    
+    build: vet
+    go build hello.go
+    .PHONY:build
+  
+
+- Makefile 의 각 가능한 작업을 타깃 이라 부른다.
+
+- `DEFAULT_GOAL` 은 어떤 타깃도 지정해주지 않았을 때 기본적으로 수행하는 타깃
+
+- `.PHONY` 라인은 타깃과 동일한 이름으로 디렉터리를 생성한 경우, make 가 혼동되지 않도록 한다.
+
+- 실행 명령어 `make`
+
+
