[Chapter #01] Go 개발환경설정 Overview

--- a/Chatper 01-Go 개발환경 설정/김정인.md
+++ b/Chatper 01-Go 개발환경 설정/김정인.md
@@ -5,6 +5,11 @@
 - Go 프로젝트의 작업공간에 대한 이해와 환경변수 설정을 알 수 있다.
 
 
+- Go 의 run, build, fmt, lint, vet 등의 명령어를 이해할 수 있다.
+
+
+- Makefile 을 통해 go 명령어를 자동화할 수 있다.
+
 
 <br />
 
